--- a/style.css
+++ b/style.css
@@ -40,9 +40,15 @@ p {
   box-sizing: border-box;
 }
 
-.character {
+.ball {
   background-color: blue;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
+}
+
+.userSquare {
+  background-color: red;
+  width: 30px;
+  height: 30px;
 }
