--- a/style.css
+++ b/style.css
@@ -30,15 +30,15 @@ p {
 .grid {
   display: flex;
   display: grid;
-  grid-template-rows: repeat(13, 1fr);
-  grid-template-columns: repeat(13, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+  grid-template-columns: repeat(9, 1fr);
 }
 
 .square {
-  border: 1px solid #ddd;
+  border: 1px solid #000000;
   text-align: center;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   box-sizing: border-box;
   position: relative;
 }
@@ -46,14 +46,14 @@ p {
 .ball {
   position: relative;
   background-color: blue;
-  width: 28px;
-  height: 28px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
 }
 
 .userSquare {
   position: relative;
   background-color: red;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
 }
