--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: black;
-  color: white;
+  background-color: rgb(255, 232, 232);
+  color: rgb(0, 0, 0);
 }
 
 /* game board page */
@@ -46,9 +46,8 @@ p {
 
 .userSquare {
   position: relative;
-  background-color: red;
   width: 50px;
-  height: 50px;
+  height: 80px;
 }
 
 /* characters page  */
@@ -63,7 +62,9 @@ p {
   max-width: 600px;
 }
 
-.characters > div {
+.sillyGuy,
+.shark {
+  display: inline;
   width: 100px;
   height: 100px;
   background-color: red;
