--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ img {
 }
 
 .square {
-  border: solid transparent;
+  border: solid black;
   text-align: center;
   width: 55px;
   height: 55px;
@@ -60,14 +60,12 @@ img {
 .ball {
   display: flex;
   position: relative;
-  background-color: blue;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .userSquare {
