--- a/style.css
+++ b/style.css
@@ -7,8 +7,13 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("Images/Background.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
+  font-family: "Tiny5", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
 }
 
 /* game board page */
@@ -22,11 +27,13 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   margin-bottom: 50px;
-  width: 600px;
+  width: 750px;
 }
 
 p {
   margin: 50px;
+  font-size: 30px;
+  color: rgb(78, 121, 76);
 }
 
 .grid {
@@ -50,7 +57,7 @@ img {
 }
 
 .square {
-  border: solid transparent;
+  /* border: solid transparent; */
   text-align: center;
   width: 55px;
   height: 55px;
@@ -81,8 +88,8 @@ img {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   margin: 0px 30px;
   margin-top: 30px;
   justify-content: center;
@@ -90,11 +97,24 @@ img {
 
 .sillyGuy > img,
 .shark > img {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
 }
 
 a {
   display: flex;
   justify-content: center;
+  text-decoration: none;
+  color: rgb(21, 106, 21);
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 25px;
+  line-height: 0px;
 }
