--- a/style.css
+++ b/style.css
@@ -6,18 +6,39 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background-image: url("Images/Background.jpg");
-  background-size: fill;
-  background-position: center;
   font-family: "Tiny5", sans-serif;
   font-size: 20px;
   font-weight: 400;
   font-style: normal;
   color: white;
+  background-color: #9bd4c3;
+}
+.gameOver {
+  background-image: url("Images/Background2.jpg");
+  background-size: fill;
+  background-position: center;
 }
 
-/* game board page */
+/* index */
+.index {
+  background-image: url("Images/Background.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.index > h1,
+.index > h2,
+.index > a {
+  margin-left: 10%;
+}
 
+.index > h1 {
+  font-size: 100px;
+  margin-bottom: 3%;
+}
+/* game board page */
 .GameBoard {
   justify-content: flex-start;
 }
@@ -95,7 +116,7 @@ img {
   align-items: center;
   width: 300px;
   height: 300px;
-  margin: 0px 30px;
+  margin: 0px 100px;
   margin-top: 30px;
   justify-content: center;
 }
